ajuste apellido gomez

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-5 col-12">
                         <img src="images/barbara.jpg" 
-                             class="about-image ms-lg-auto bg-light shadow-lg img-fluid" alt="Barbara Jaramillo Gomez">
+                             class="about-image ms-lg-auto bg-light shadow-lg img-fluid" alt="Barbara Jaramillo Gómez">
                     </div>
                     <div class="col-lg-5 col-md-7 col-12">
                         <div class="custom-text-block">
