fix imagen sofia

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                         <div class="contact-info-wrap">
                             <h2>Contáctanos</h2>
                             <div class="contact-image-wrap d-flex flex-wrap">
-                                <img src="images/avatar/pretty-blonde-woman-wearing-white-t-shirt.jpg"
+                                <img src="images/avatar/4.jpg"
                                     class="img-fluid avatar-image" alt="">
                                 <div class="d-flex flex-column justify-content-center ms-3">
                                     <p class="mb-0">Sofía Martínez</p>
