--- a/donate.html
+++ b/donate.html
@@ -24,17 +24,17 @@
                 <div class="col-lg-8 col-12 d-flex flex-wrap">
                     <p class="d-flex me-4 mb-0">
                         <i class="bi-geo-alt me-2"></i>
-                        Calle 100 # 10-20, Medellín, Colombia
+                        Calle 123 #45-67, Medellín, Colombia
                     </p>
                     <p class="d-flex mb-0">
                         <i class="bi-envelope me-2"></i>
-                        <a href="mailto:info@corazonamable.com">
-                            info@corazonamable.com
+                        <a href="mailto:info@corazonamable.org">
+                            info@corazonamable.org
                         </a>
                     </p>
                 </div>
                 <div class="col-lg-3 col-12 ms-auto d-lg-block d-none">
-                    <ul class="social-icon">
+                    <!-- <ul class="social-icon">
                         <li class="social-icon-item">
                             <a href="#" class="social-icon-link bi-twitter"></a>
                         </li>
@@ -50,7 +50,7 @@
                         <li class="social-icon-item">
                             <a href="#" class="social-icon-link bi-whatsapp"></a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -59,10 +59,10 @@
     <nav class="navbar navbar-expand-lg bg-light shadow-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" class="logo img-fluid" alt="">
+                <img src="images/logo.png" class="logo img-fluid" alt="Corazón Amable">
                 <span>
                     Corazón Amable
-                    <small>Organización Sin Fines de Lucro</small>
+                    <small>Organización sin fines de lucro</small>
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -72,25 +72,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="index.html#section_1">Inicio</a>
+                        <a class="nav-link click-scroll" href="index.html#top">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="index.html#section_2">Acerca de</a>
+                        <a class="nav-link click-scroll" href="index.html#team">Nosotras</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="index.html#section_3">Causas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="index.html#section_4">Voluntariado</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link click-scroll dropdown-toggle" href="index.html#section_5"
-                            id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">Noticias</a>
-                        <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Listado de Noticias</a></li>
-                            <li><a class="dropdown-item" href="#">Detalles de la Noticia</a></li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="index.html#section_6">Contacto</a>
@@ -236,10 +227,9 @@
                     <h5 class="site-footer-title mb-3">Enlaces Rápidos</h5>
                     <ul class="footer-menu">
                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Nuestra Historia</a></li>
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Sala de Noticias</a></li>
+                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Sala de Prensa</a></li>
                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Causas</a></li>
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Conviértete en Voluntario</a>
-                        </li>
+                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Hazte Voluntario</a></li>
                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Asóciate con Nosotros</a></li>
                     </ul>
                 </div>
@@ -247,17 +237,17 @@
                     <h5 class="site-footer-title mb-3">Información de Contacto</h5>
                     <p class="text-white d-flex mb-2">
                         <i class="bi-telephone me-2"></i>
-                        <a href="tel:305-240-9671" class="site-footer-link">305-240-9671</a>
+                        <a href="tel: 305-240-9671" class="site-footer-link">305-240-9671</a>
                     </p>
                     <p class="text-white d-flex">
                         <i class="bi-envelope me-2"></i>
-                        <a href="mailto:donar@corazonamable.org" class="site-footer-link">donar@corazonamable.org</a>
+                        <a href="mailto:info@yourgmail.com" class="site-footer-link">info@corazonamable.org</a>
                     </p>
                     <p class="text-white d-flex mt-3">
                         <i class="bi-geo-alt me-2"></i>
-                        Calle de la Bondad, 123, Medellín, Colombia
+                        Calle 123 #45-67, Medellín, Colombia
                     </p>
-                    <a href="#" class="custom-btn btn mt-3">Obtener Dirección</a>
+                    <a href="#" class="custom-btn btn mt-3">Obtener Direcciones</a>
                 </div>
             </div>
         </div>
@@ -265,7 +255,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-7 col-12">
-                        <p class="copyright-text mb-0">Copyright © 2036 <a href="#">Corazón Amable</a>
+                        <p class="copyright-text mb-0">Derechos de Autor © 2024 <a href="#">Corazón Amable</a>
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-5 col-12 d-flex justify-content-center align-items-center mx-auto">
