--- a/index.html
+++ b/index.html
@@ -405,9 +405,8 @@
                         </div>
                         <h3>Escucha nuestro Podcast</h3>
                         <p>Conoce las historias y aprendizajes de nuestros mayores.</p>
-                        <a href="javascript:void(0);"
-                            onclick="openPodcastModal('https://soundcloud.com/mariana-zapata-garcia/y-ahora-que/s-1HFNGfOs88T?si=7462aeaf83ad405aab104f480c0c033d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing')"
-                            class="custom-btn btn smoothscroll"
+                        <a href="https://soundcloud.com/mariana-zapata-garcia/y-ahora-que?si=492fa495dd784afa9c9a2cf1d7bdb8d2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"
+                            target="_blank" class="custom-btn btn smoothscroll"
                             style="background-color: #6c83f7; color: white; padding: 10px 20px; border-radius: 50px; margin-top: 10px;">
                             Escuchar Podcast
                         </a>
@@ -822,7 +821,7 @@
                                 <p class="d-flex">
                                     <i class="bi-envelope me-2"></i>
                                     <a href="mailto:info@yourgmail.com">
-                                        donate@charity.org
+                                        info@corazonamable.org
                                     </a>
                                 </p>
                                 <a href="#" class="custom-btn btn mt-3">Obtener Direcciones</a>
@@ -833,7 +832,7 @@
                         <form class="custom-form contact-form" action="#" method="post" role="form">
                             <h2>Formulario de Contacto</h2>
                             <p class="mb-4">O, también puedes enviar un correo electrónico:
-                                <a href="#">info@charity.org</a>
+                                <a href="#">info@corazonamable.org</a>
                             </p>
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-12">
@@ -900,7 +899,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-5 col-12 d-flex justify-content-center align-items-center mx-auto">
-                        <ul class="social-icon">
+                        <!-- <ul class="social-icon">
                             <li class="social-icon-item">
                                 <a href="#" class="social-icon-link bi-twitter"></a>
                             </li>
@@ -916,7 +915,7 @@
                             <li class="social-icon-item">
                                 <a href="https://youtube.com/templatemo" class="social-icon-link bi-youtube"></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
