--- a/donate.html
+++ b/donate.html
@@ -259,7 +259,7 @@
                         </p>
                     </div>
                     <div class="col-lg-6 col-md-5 col-12 d-flex justify-content-center align-items-center mx-auto">
-                        <ul class="social-icon">
+                        <!-- <ul class="social-icon">
                             <li class="social-icon-item">
                                 <a href="#" class="social-icon-link bi-twitter"></a>
                             </li>
@@ -275,7 +275,7 @@
                             <li class="social-icon-item">
                                 <a href="https://youtube.com/templatemo" class="social-icon-link bi-youtube"></a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
